static/_css/content.css
* {
  box-sizing: border-box;
}

.content {
  font-family: 'Roboto', sans-serif;
  line-height: 1.6;
  max-width: 960px;
  padding: 0.5em;
  margin: auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Roboto Condensed', sans-serif;
  margin: 1.5em 0 0.75em 0;
}

h1 {
  border-bottom: 2px solid black;
}

h2 {
  border-bottom: 1px solid black;
}

h1 { font-size: 2em; }
h2 { font-size: 1.5em; }
h3 { font-size: 1.17em; }
h4 { font-size: 1.12em; }
h5 { font-size: .83em; }
h6 { font-size: .75em; }

header h1 {
  font-size: 3em;
  margin: 0;
}

/* code inline */
code {
  font-family: 'Roboto Mono', monospace;
  font-size: 0.75em;
  padding: 0.2em 0.4em;
  border-radius: 0.2em;
  background-color: #f0f0f0;
}

/* code block */
.sourceCode,
.example {
  border-radius: 0.3em;
  background-color: #f0f0f0;
}

pre {
  font-family: 'Roboto Mono', monospace;
  padding: 0.75em 1em;
}

pre code {
  font-size: 1em;
  background-color: inherit;
  padding: 0;
}

/* striped table */
table {
  margin: 2em 3em;
  padding: 0.75em 1em;
  border-collapse:collapse;
}

tbody tr:nth-child(odd) {
  background-color: #f0f0f0;
}

table th {
  font-size: 1.33em;
  padding: 0.5em 1em;
}

table td {
  padding: 0.5em 1em;
}

/* iframe aspect ratio support */
.embed {
  position: relative;
  display: block;
  overflow: hidden;
  width: 100%;
}

.embed-16by9 {
  padding: calc(100% * 9 / 16) 0 0 0;
}

.embed-4by3 {
  padding: calc(100% * 3 / 4) 0 0 0;
}

.embed iframe {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

